# HmatRBFFDOseen

./: .gitignore  CMakeLists.txt  README.md  h2libext.h
Extensions/: CMakeLists.txt
Extensions/auxiliaries/: aux_eigen.hpp  aux_h2lib.cpp  aux_h2lib.h  aux_medusa.cpp  aux_medusa.hpp
Extensions/cluster/: admissible.cpp  admissible.h  oseencluster.cpp  oseencluster.h
Extensions/discretization/: domain.cpp  domain.hpp  support_by_cluster.cpp  support_by_cluster.hpp  weights.hpp
Extensions/harith/: harith3.cpp  harith3.hpp  lanczostrunc.cpp  lanczostrunc.hpp  rand_trunc.cpp  rand_trunc.hpp  sumexpression.cpp  sumexpression.hpp  transpose.cpp  transpose.hpp  truncation.cpp  truncation.hpp
Extensions/harith/Tests/: test_addmul3_hmatrix.cpp  test_harith3.cpp
Extensions/io/: io.cpp  io.h
Extensions/preconditioning/: hlu.cpp  hlu.h  prec.h
Extensions/sparse/: sparse_compression.cpp  sparse_compression.h  spmatrix.cpp  spmatrix.h
H2Lib/Examples/: example_hmatrix_bem3d.c
H2Lib/Tests/: test_amatrix.c  test_h2matrix.c  test_helmholtzbem3d.c  test_helmholtzbem3d_ocl.c  test_hmatrix.c
Tests/: CMakeLists.txt  csp_more_coupled_stencil.cpp  csp_std.cpp  estimate_cond.cpp  oseenDirect.cpp  oseenHLU.cpp  oseenHLU_more_coupled_stencil.cpp  oseenILUT.cpp
Tests/OFF_Files/: FlowAroundCuboid.off  FlowAroundCylinder.off  FlowAroundCylinder_TinkerCAD.off  long_cuboid.off
medusa/include/medusa/bits/operators/: ImplicitOperators.hpp  ImplicitOperators_fwd.hpp
